@@ -8,3 +8,4 @@ Gossip:
 Removals:
 
 Fixes:
+- Fixed a rare bug where an error could be thrown for weapon comparison in legacy content while Item Level is selected for Quest Rewards.
